Update Dist::Zilla config.

--- a/dist.ini
+++ b/dist.ini
@@ -4,19 +4,6 @@ license = Perl_5
 copyright_holder = Aaron Johnson
 copyright_year   = 2014
 
-version = 0.004
+version = 0.005
 
-[Encoding]
-encoding=Latin-1
-[GatherDir]
-[MetaYAML]
-[MakeMaker]
-[Manifest]
-[ManifestSkip]
-[PodWeaver]
-finder = :InstallModules
-finder = :ExecFiles
-[AutoPrereqs]
-skip = ^WWW::Spotify
-[TestRelease]
-[ConfirmRelease]
+[@Author::OALDERS]
