--- a/tidyall.ini
+++ b/tidyall.ini
@@ -1,12 +1,12 @@
-;[PerlTidy]
-;select = **/*.{pl,pm,t,psgi}
-;ignore = t/00-*
-;ignore = t/author-*
-;ignore = t/release-*
-;ignore = blib/**/*
-;ignore = .build/**/*
-;ignore = WWW-Spotify-*/**/*
-;argv = --profile=$ROOT/perltidyrc
+[PerlTidy]
+select = **/*.{pl,pm,t,psgi}
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = blib/**/*
+ignore = .build/**/*
+ignore = WWW-Spotify-*/**/*
+argv = --profile=$ROOT/perltidyrc
 
 ;[PerlCritic]
 ;select = **/*.{pl,pm,t,psgi}
@@ -19,7 +19,7 @@
 ;argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
 
 [SortLines::Naturally]
-.gitignore
+select = .gitignore
 
 [UniqueLines]
-.gitignore
+select = .gitignore
