Tidy config for stopwords.

--- a/tidyall.ini
+++ b/tidyall.ini
@@ -20,6 +20,8 @@ argv = --profile=$ROOT/perltidyrc
 
 [SortLines::Naturally]
 select = .gitignore
+select = .stopwords
 
 [UniqueLines]
 select = .gitignore
+select = .stopwords
