--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,9 @@ name    = WWW-Spotify
 author  = Aaron Johnson <aaronjjohnson@gmail.com>
 license = Perl_5
 copyright_holder = Aaron Johnson
-copyright_year   = 2014
+copyright_year   = 2014-2017
 
-version = 0.008
+version = 0.009
 
 [@Author::OALDERS]
 -remove = PodCoverageTests
