--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,52 @@
+---
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 language: perl
 perl:
-  - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
+  - blead
+  - dev
+  - '5.30'
+  - '5.28'
+  - '5.26'
+  - '5.24'
+  - '5.22'
+  - '5.20'
+  - '5.18'
+  - '5.16'
+  - '5.14'
+  - '5.12'
+  - '5.10'
+cache:
+  directories:
+    - $HOME/perl5
+matrix:
+  allow_failures:
+    - perl: blead
+  fast_finish: 1
+  include:
+    - env: COVERAGE=1
+      perl: '5.30'
+env:
+  global:
+    - AUTHOR_TESTING=1
+    - RELEASE_TESTING=1
 before_install:
-  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - eval $(curl https://travis-perl.github.io/init) --auto --always-upgrade-modules
   - source ~/travis-perl-helpers/init
   - build-perl
   - perl -V
-script:
-  - "prove -lr t"
 notifications:
   email:
+    on_failure: always
+    on_success: always
     recipients:
       - olaf@wundersolutions.com
-    on_success: always
-    on_failure: always
+### __app_cisetup__
+# ---
+# force_threaded_perls: 0
+# perl_caching: 1
+
+### __app_cisetup__
