--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = WWW-Spotify
 author  = Aaron Johnson <aaronjjohnson@gmail.com>
 license = Perl_5
 copyright_holder = Aaron Johnson
-copyright_year   = 2014-2017
+copyright_year   = 2014
 
 [@Author::OALDERS]
 -remove = PodCoverageTests
