Enable static install

--- a/dist.ini
+++ b/dist.ini
@@ -5,5 +5,7 @@ copyright_holder = Aaron Johnson
 copyright_year   = 2014
 
 [@Author::OALDERS]
+StaticInstall.mode = on
+StaticInstall.dry_run = 0
 -remove = PodCoverageTests
 -remove = CheckChangesHasContent
