--- a/.travis.yml
+++ b/.travis.yml
@@ -8,23 +8,24 @@ language: perl
 perl:
   - blead
   - dev
-  - '5.30'
-  - '5.28'
-  - '5.26'
-  - '5.24'
-  - '5.22'
-  - '5.20'
-  - '5.18'
-  - '5.16'
-  - '5.14'
-  - '5.12'
-  - '5.10'
+  - "5.30"
+  - "5.28"
+  - "5.26"
+  - "5.24"
+  - "5.22"
+  - "5.20"
+  - "5.18"
+  - "5.16"
+  - "5.14"
+  - "5.12"
+  - "5.10"
 cache:
   directories:
     - $HOME/perl5
 matrix:
   allow_failures:
     - perl: blead
+    - perl: dev
   fast_finish: 1
   include:
     - env: COVERAGE=1
