Don't source Perl helpers

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,15 +29,13 @@ matrix:
   fast_finish: 1
   include:
     - env: COVERAGE=1
-      perl: '5.30'
+      perl: "5.30"
 env:
   global:
     - AUTHOR_TESTING=1
     - RELEASE_TESTING=1
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto --always-upgrade-modules
-  - source ~/travis-perl-helpers/init
-  - build-perl
   - perl -V
 notifications:
   email:
