--- a/dist.ini
+++ b/dist.ini
@@ -7,5 +7,5 @@ copyright_year   = 2014
 [@Author::OALDERS]
 StaticInstall.mode = on
 StaticInstall.dry_run = 0
--remove = PodCoverageTests
 -remove = CheckChangesHasContent
+Test::Pod::Coverage::Configurable.trustme = WWW::Spotify => qr/(build_url_base|format_results|get_access_token|get_client_credentials|get_oauth_authorize|join_ids|me|next_result_set|previous_result_set|send_get_request|send_post_request|user_playlist|user_playlist_add_tracks|user_playlist_create|user_playlists)/
