JSON::Path is causing tests to fail on 5.8
Should be fine to drop support for this Perl version. See
https://github.com/PopeFelix/p5-json-path/issues/28

--- a/dist.ini
+++ b/dist.ini
@@ -12,3 +12,4 @@ Test::Pod::Coverage::Configurable.trustme = WWW::Spotify => qr/(build_url_base|f
 
 [Prereqs / RuntimeRequires]
 LWP::Protocol::https = 6.10
+perl = 5.010
