--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,12 @@ name: dzil build and test
 on:
   push:
     branches:
-      - "*"
+      - '*'
   pull_request:
     branches:
-      - "*"
+      - '*'
   schedule:
-    - cron: "15 4 * * 0" # Every Sunday morning
+    - cron: '15 4 * * 0'  # Every Sunday morning
   workflow_dispatch:
 
 jobs:
@@ -39,7 +39,7 @@ jobs:
     container:
       image: perldocker/perl-tester:5.34
     steps:
-      - uses: actions/checkout@v2 # codecov wants to be inside a Git repository
+      - uses: actions/checkout@v2  # codecov wants to be inside a Git repository
       - uses: actions/download-artifact@v2
         with:
           name: build_dir
@@ -50,25 +50,25 @@ jobs:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
   ubuntu-test-job:
     needs: build-job
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-20.04]
         perl-version:
-          - "5.10"
-          - "5.12"
-          - "5.14"
-          - "5.16"
-          - "5.18"
-          - "5.20"
-          - "5.22"
-          - "5.24"
-          - "5.26"
-          - "5.28"
-          - "5.30"
-          - "5.32"
-          - "5.34"
+          - '5.10'
+          - '5.12'
+          - '5.14'
+          - '5.16'
+          - '5.18'
+          - '5.20'
+          - '5.22'
+          - '5.24'
+          - '5.26'
+          - '5.28'
+          - '5.30'
+          - '5.32'
+          - '5.34'
     name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     steps:
       - name: set up perl
@@ -82,33 +82,33 @@ jobs:
       - name: install deps using cpm
         uses: perl-actions/install-with-cpm@v1
         with:
-          cpanfile: "cpanfile"
-          args: "--with-suggests --with-recommends --with-test"
+          cpanfile: 'cpanfile'
+          args: '--with-suggests --with-recommends --with-test'
       - run: prove -lr t
         env:
           AUTHOR_TESTING: 0
           RELEASE_TESTING: 0
   macos-test-job:
     needs: ubuntu-test-job
-    runs-on: "macos-latest"
+    runs-on: 'macos-latest'
     strategy:
       fail-fast: true
       matrix:
         os: [macos-latest]
         perl-version:
-          - "5.10"
-          - "5.12"
-          - "5.14"
-          - "5.16"
-          - "5.18"
-          - "5.20"
-          - "5.22"
-          - "5.24"
-          - "5.26"
-          - "5.28"
-          - "5.30"
-          - "5.32"
-          - "5.34"
+          - '5.10'
+          - '5.12'
+          - '5.14'
+          - '5.16'
+          - '5.18'
+          - '5.20'
+          - '5.22'
+          - '5.24'
+          - '5.26'
+          - '5.28'
+          - '5.30'
+          - '5.32'
+          - '5.34'
     name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     steps:
       - name: set up perl
@@ -122,32 +122,32 @@ jobs:
       - name: install deps using cpm
         uses: perl-actions/install-with-cpm@v1
         with:
-          cpanfile: "cpanfile"
-          args: "--with-suggests --with-recommends --with-test"
+          cpanfile: 'cpanfile'
+          args: '--with-suggests --with-recommends --with-test'
       - run: prove -lr t
         env:
           AUTHOR_TESTING: 0
           RELEASE_TESTING: 0
   windows-test-job:
     needs: ubuntu-test-job
-    runs-on: "windows-latest"
+    runs-on: 'windows-latest'
     strategy:
       fail-fast: true
       matrix:
         os: [windows-latest]
         perl-version:
-          - "5.20"
-          - "5.22"
-          - "5.26"
-          - "5.28"
-          - "5.30"
+          - '5.20'
+          - '5.22'
+          - '5.26'
+          - '5.28'
+          - '5.30'
     name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     steps:
       - name: set up perl
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl-version }}
-          distribution: strawberry # this option only used on windows
+          distribution: strawberry  # this option only used on windows
       - uses: actions/download-artifact@v2
         with:
           name: build_dir
@@ -155,8 +155,8 @@ jobs:
       - name: install deps using cpm
         uses: perl-actions/install-with-cpm@v1
         with:
-          cpanfile: "cpanfile"
-          args: "--with-suggests --with-recommends --with-test"
+          cpanfile: 'cpanfile'
+          args: '--with-suggests --with-recommends --with-test'
       - run: prove -lr t
         env:
           AUTHOR_TESTING: 0
